--- a/package.json
+++ b/package.json
@@ -1,94 +1,94 @@
 {
-  "name": "smartlook-react-native-wrapper",
-  "version": "1.2.2",
-  "description": "React native wrapper for Smartlook SDK",
-  "homepage": "https://www.smartlook.com/",
-  "keywords": [
-    "react-native",
-    "smartlook",
-    "android",
-    "ios",
-    "recording",
-    "analytics"
-  ],
-  "author": "",
-  "license": "",
-  "main": "lib/commonjs/index.js",
-  "module": "lib/module/index.js",
-  "react-native": "src/",
-  "types": "lib/typescript/src/index.d.ts",
-  "scripts": {
-    "typescript": "tsc --noEmit --project tsconfig.build.json",
-    "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "prepare": "bob build",
-    "watch": "nodemon --watch src -e js,ts,tsx,json --exec yarn prepare",
-    "test": "jest",
-    "testcoverage": "jest --coverage",
-    "example": "yarn --cwd example",
-    "pods": "cd example && npx pod-install --quiet",
-    "bootstrap": "yarn example && yarn && yarn pods",
-    "docs": "typedoc --theme markdown --readme none --entryPoints ./src/index.ts --out docs && concat-md --ignore 'enums,interfaces' --toc --decrease-title-levels --dir-name-as-title  --file-name-as-title docs  > README.md && sed -i '' -e 's/\\.\\./docs/' README.md",
-    "postpublish": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
-    "@babel/runtime": "^7.10.3",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@testing-library/react-native": "^8.0.0-rc.1",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/react-native": "^0.64.2",
-    "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "4.22.0",
-    "@typescript-eslint/parser": "4.22.0",
-    "babel-plugin-inline-json-import": "^0.3.2",
-    "concat-md": "^0.3.5",
-    "eslint": "7.24.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-jest": "^24.3.5",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^26.6.3",
-    "jest-html-reporter": "^3.3.0",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "nodemon": "^2.0.7",
-    "react": "17.0.1",
-    "react-native": "^0.64.0",
-    "react-native-builder-bob": "^0.18.1",
-    "react-test-renderer": "^17.0.2",
-    "rimraf": "^3.0.2",
-    "showdown": "^1.9.1",
-    "typedoc": "^0.20.36",
-    "typedoc-plugin-markdown": "^3.8.1",
-    "typedoc-plugin-merge-modules": "^2.0.0",
-    "typedoc-plugin-rename-defaults": "^0.1.0",
-    "typescript": "^4.2.4",
-    "typescript-documentation": "^2.0.0"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
-  },
-  "files": [
-    "src",
-    "lib",
-    "android",
-    "ios",
-    "smartlook-react-native-bridge.podspec",
-    "!lib/typescript/example",
-    "!android/build",
-    "!ios/build",
-    "!**/__tests__",
-    "!**/__fixtures__",
-    "!**/__mocks__"
-  ],
-  "eslintIgnore": [
-    "node_modules/",
-    "lib/",
-    "coverage/"
-  ],
-  "dependencies": {
-    "@seznam/compose-react-refs": "^1.0.6"
-  }
+	"name": "smartlook-react-native-wrapper",
+	"version": "1.2.2",
+	"description": "React native wrapper for Smartlook SDK",
+	"homepage": "https://www.smartlook.com/",
+	"keywords": [
+		"react-native",
+		"smartlook",
+		"android",
+		"ios",
+		"recording",
+		"analytics"
+	],
+	"author": "",
+	"license": "UNLICENSED",
+	"main": "lib/commonjs/index.js",
+	"module": "lib/module/index.js",
+	"react-native": "src/",
+	"types": "lib/typescript/src/index.d.ts",
+	"scripts": {
+		"typescript": "tsc --noEmit --project tsconfig.build.json",
+		"lint": "eslint \"**/*.{js,ts,tsx}\"",
+		"prepare": "bob build",
+		"watch": "nodemon --watch src -e js,ts,tsx,json --exec yarn prepare",
+		"test": "jest",
+		"testcoverage": "jest --coverage",
+		"example": "yarn --cwd example",
+		"pods": "cd example && npx pod-install --quiet",
+		"bootstrap": "yarn example && yarn && yarn pods",
+		"docs": "typedoc --theme markdown --readme none --entryPoints ./src/index.ts --out docs && concat-md --ignore 'enums,interfaces' --toc --decrease-title-levels --dir-name-as-title  --file-name-as-title docs  > README.md && sed -i '' -e 's/\\.\\./docs/' README.md",
+		"postpublish": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.14.3",
+		"@babel/preset-react": "^7.14.5",
+		"@babel/preset-typescript": "^7.14.5",
+		"@babel/runtime": "^7.10.3",
+		"@react-native-community/eslint-config": "^2.0.0",
+		"@testing-library/react-native": "^8.0.0-rc.1",
+		"@types/jest": "^26.0.22",
+		"@types/node": "^14.14.37",
+		"@types/react-native": "^0.64.2",
+		"@types/react-test-renderer": "^17.0.1",
+		"@typescript-eslint/eslint-plugin": "4.22.0",
+		"@typescript-eslint/parser": "4.22.0",
+		"babel-plugin-inline-json-import": "^0.3.2",
+		"concat-md": "^0.3.5",
+		"eslint": "7.24.0",
+		"eslint-config-prettier": "^8.2.0",
+		"eslint-plugin-jest": "^24.3.5",
+		"eslint-plugin-prettier": "^3.4.0",
+		"jest": "^26.6.3",
+		"jest-html-reporter": "^3.3.0",
+		"metro-react-native-babel-preset": "^0.64.0",
+		"nodemon": "^2.0.7",
+		"react": "17.0.1",
+		"react-native": "^0.64.0",
+		"react-native-builder-bob": "^0.18.1",
+		"react-test-renderer": "^17.0.2",
+		"rimraf": "^3.0.2",
+		"showdown": "^1.9.1",
+		"typedoc": "^0.20.36",
+		"typedoc-plugin-markdown": "^3.8.1",
+		"typedoc-plugin-merge-modules": "^2.0.0",
+		"typedoc-plugin-rename-defaults": "^0.1.0",
+		"typescript": "^4.2.4",
+		"typescript-documentation": "^2.0.0"
+	},
+	"peerDependencies": {
+		"react": "*",
+		"react-native": "*"
+	},
+	"files": [
+		"src",
+		"lib",
+		"android",
+		"ios",
+		"smartlook-react-native-bridge.podspec",
+		"!lib/typescript/example",
+		"!android/build",
+		"!ios/build",
+		"!**/__tests__",
+		"!**/__fixtures__",
+		"!**/__mocks__"
+	],
+	"eslintIgnore": [
+		"node_modules/",
+		"lib/",
+		"coverage/"
+	],
+	"dependencies": {
+		"@seznam/compose-react-refs": "^1.0.6"
+	}
 }
